<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:bbn_itemAnimationDuration="200"
    app:bbn_itemColorActive="@android:color/white"
    app:bbn_itemColorInactive="#a3a3a3"
    app:bbn_rippleColor="#33ffffff">
    <item
        android:id="@+id/action_rates"
        android:icon="@drawable/ic_list_black_24dp"
        android:color="@android:color/holo_green_dark"
        android:title="@string/bottom_bar_exchange_rates"
         />
    <item
        android:id="@+id/action_calculator"
        android:color="@color/colorPrimary"
        android:icon="@drawable/ic_compare_arrows_black_24dp"
        android:title="@string/bottom_bar_calculator"
         />
    <item
        android:id="@+id/action_timeline"
        android:color="@android:color/holo_orange_dark"
        android:icon="@drawable/ic_timeline_black_24dp"
        android:title="@string/bottom_bar_timeline"/>
</menu>


