<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_item_currency_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="25sp"
            android:textAlignment="center"
            android:paddingTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="3">
            <TextView
                android:layout_width="0dp"
                android:text="@string/list_item_buy_rate_title"
                android:textAlignment="center"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:paddingTop="10dp"/>
            <TextView
                android:text="@string/list_item_median_rate_title"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:paddingTop="10dp"/>
            <TextView
                android:text="@string/list_item_sell_rate_title"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:paddingTop="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="3">
            <TextView
                android:id="@+id/list_item_buy_rate_value"
                android:textSize="20sp"
                android:textColor="@android:color/holo_green_dark"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/list_item_median_rate_value"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/list_item_sell_rate_value"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>